--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </script>
   </head>
   <body style="background-color: #ff0; height: 100%; width: 100%">
-    <img src="nc.png" style="right: 10%; bottom: 10%; position: absolute"/>
+    <img src="/nc.png" style="right: 10%; bottom: 10%; position: absolute"/>
   </body>
 </html>
