Move banner to header

--- a/ul/index.html
+++ b/ul/index.html
@@ -16,7 +16,7 @@ layout: ul-page
 		</div>
 		<div class="blogContent">	
 			{{ post.content | truncatewords: 75 }}
-			<a href="{{ post.url }}">Continue Reading</a>
+			<a href="{{ post.url }}">continue reading</a>
 		</div>
 	</div>
 {% endfor %}
