--- a/ul/index.html
+++ b/ul/index.html
@@ -4,17 +4,19 @@ layout: ul-page
 
 {% for post in site.posts %}
 	<div class="article">
-		<h1 class="blogTitle">
-			<a href="{{ post.url }}">
-				{{ post.title }}
-			</a>
-		</h1>
-		<div class="date">
-			<div>{{ post.date | date: "%d" }}</div>
-			<div>{{ post.date | date: "%b" }}</div>
-			<div>{{ post.date | date: "%Y" }}</div>
+		<div class="header">
+		    <h2 class="centered">
+			    <a href="{{ post.url }}">
+				    {{ post.title }}
+			    </a>
+		    </h2>
 		</div>
-		<div class="blogContent">	
+		<div class="centered">
+		    <div class="date">
+			    <div>{{ post.date | date: "%d" }}</div>
+			    <div>{{ post.date | date: "%b" }}</div>
+			    <div>{{ post.date | date: "%Y" }}</div>
+		    </div>
 			{{ post.content | truncatewords: 75 }}
 			<a href="{{ post.url }}">continue reading</a>
 		</div>
