--- a/ul/index.html
+++ b/ul/index.html
@@ -1,36 +1,5 @@
 ---
-layout: ul-page
+layout: none
 ---
 
-{% for post in paginator.posts %}
-  <div class="article">
-    <div class="header">
-        <h2 class="centered">
-          <a href="{{ post.url }}">
-            {{ post.title }}
-          </a>
-        </h2>
-    </div>
-    <div class="centered">
-        <div class="date">
-          <div>{{ post.date | date: "%d" }}</div>
-          <div>{{ post.date | date: "%b" }}</div>
-          <div>{{ post.date | date: "%Y" }}</div>
-        </div>
-      {{ post.excerpt }}
-      <a href="{{ post.url }}">continue reading</a>
-    </div>
-  </div>
-{% endfor %}
-
-<div class="header">
-  <div class="centered">
-    {% if paginator.previous_page %}
-      <a href="{{ paginator.previous_page_path }}"><< Newer posts</a>
-    {% endif %}
-    {% if paginator.next_page %}
-      <a class="pull-right" href="{{ paginator.next_page_path }}">Older posts >></a>
-    {% endif %}
-    <div style="clear:both"></div>
-  </div>
-</div>
+{{ site.categories.ul.first }}
